# TextWizard

./: MANIFEST.in  README.md  pyproject.toml
corpus/dictionaries/: _build_marisa_dict.py  af.marisa.zst  an.marisa.zst  ar.marisa.zst  as.marisa.zst  be.marisa.zst  bg.marisa.zst  bn.marisa.zst  bo.marisa.zst  br.marisa.zst  bs.marisa.zst  cs.marisa.zst  da.marisa.zst  el.marisa.zst  en.marisa.zst  eo.marisa.zst  es.marisa.zst  fa.marisa.zst  fr.marisa.zst  gd.marisa.zst  gn.marisa.zst  gu.marisa.zst  hi.marisa.zst  hr.marisa.zst  id.marisa.zst  is.marisa.zst  it.marisa.zst  ja.marisa.zst  kmr.marisa.zst  kn.marisa.zst  lo.marisa.zst  lv.marisa.zst  nb.marisa.zst  ne.marisa.zst  nl.marisa.zst  nn.marisa.zst  oc.marisa.zst  or.marisa.zst  pa.marisa.zst  pl.marisa.zst  (+12 more)
corpus/dictionaries/THIRD-PARTY-LICENSES/: LICENSES_APACHE  LICENSES_LGPL-2.1.txt  NOTICE.txt  THIRD-PARTY-LICENSES.txt
docs_source/: analyze_text_statistics.rst  azure_ocr.rst  beautiful_html.rst  beutifull_html.rst  clean_html.rst  clean_xml.rst  conf.py  html_to_markdown.rst  intro.rst  lang_detect.rst  modules.rst  text_similarity.rst
docs_source/_build/doctrees/: analyze_text_statistics.doctree  azure_ocr.doctree  beutifull_html.doctree  clean_csv.doctree  clean_html.doctree  clean_xml.doctree  correctness_text.doctree  environment.pickle  extract_entities.doctree  extract_text.doctree  html_to_markdown.doctree  index.doctree  intro.doctree  lang_detect.doctree  modules.doctree  text_similarity.doctree
docs_source/_build/html/: .buildinfo  .buildinfo.bak  analyze_text_statistics.html  azure_ocr.html  beutifull_html.html  clean_csv.html  clean_html.html  clean_xml.html  correctness_text.html  extract_entities.html  extract_text.html  genindex.html  html_to_markdown.html  index.html  intro.html  lang_detect.html  (+5 more)
test/test_analyze_text/: test_correctness.py  test_ctests_runner.py  test_lang_detect.py  utils_test.py
test/test_cleaner_csv/: test_csv.py
test/test_cleaner_html/: test_html.py
test/test_ner/: ner_test.py
test/test_text_extractor/: test_text_extractor.py
test/test_tokenizer_html/: test_tokenizer.py  test_tree_construction.py
test/test_wildcard/: test_wildcard.py
test/test_xml_cleaner/: test_xml_cleaner.py
textwizard/: __init__.py  text_wizard.py
textwizard/THIRD_PARTY_LICENSES/: THIRD-PARTY-DICTIONARIES.md
textwizard/wizard_analyze_text/: similarity.py  statistical.py
textwizard/wizard_extractors/: extraction_text.py
(+62 files in other folders)
