[build-system]
requires = ["setuptools", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "textwizard"
version = "1.1.0"
description = "Extract, clean, and analyze text from PDFs, Office docs, images, CSV/HTML. Local OCR (Tesseract), Azure DI, NER (spaCy/Stanza), language detection, spell-check, statistics, and HTML tools."
license = { file = "LICENSE" }

readme = { file = "README.md", content-type = "text/markdown" }

authors = [{ name = "Mattia Rubino", email = "textwizard.dev@gmail.com" }]
requires-python = ">=3.9"
keywords = ["text", "ocr", "pdf", "docx", "html", "csv", "nlp", "ner", "language-detection", "spell-check"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: Developers",
  "Topic :: Text Processing",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
]

dependencies = [
  "pandas>=2.3.1",
  "PyMuPDF>=1.25.0",
  "pytesseract>=0.3.13",
  "xlrd>=2.0.1",
  "openpyxl>=3.1.5",
  "marisa-trie>=1.3.0",
  "zstandard>=0.22",
  "platformdirs>=4.0",
  "regex>=2024.11.6",
  "pyahocorasick>=2.2.0", 
  "lxml>=5.0.0"
]

[project.optional-dependencies]
azure = ["azure-ai-documentintelligence>=1.0.2", "azure-core>=1.24.0"]
ner   = ["spacy>=3.5.0", "stanza>=1.5.0", "spacy-stanza>=0.3.0"]
all   = ["azure-ai-documentintelligence>=1.0.2", "azure-core>=1.24.0", "spacy>=3.5.0", "stanza>=1.5.0", "spacy-stanza>=0.3.0"]

[project.urls]
Homepage = "https://github.com/textwizard-dev/textwizard"
Source = "https://github.com/textwizard-dev/textwizard"
Documentation = "https://textwizard.readthedocs.io/en/latest/"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"] 

[tool.setuptools.packages.find]
include = ["textwizard", "textwizard.*"]

[tool.setuptools.package-data]
"textwizard" = ["THIRD_PARTY_LICENSES/**"]
"textwizard.wizard_analyze_text.wizzard_lang_detect" = [
  "lang_addons/**",
  "profiles_trie_kn/**"
]


[[tool.setuptools.ext-modules]]
name = "textwizard.utils.tw_html_parser.entities_wrapper"
sources = [
  "textwizard/utils/tw_html_parser/entities_wrapper.pyx",
  "textwizard/utils/tw_html_parser/entities_hash.c"
]
include-dirs = ["textwizard/utils/tw_html_parser"]